<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_to">Send To</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="donate">Donate</string>
    <string name="other_apps">Other Apps</string>
    <string name="ads">Ads</string>

    //adMob
    <string name="app_id">ca-app-pub-9041694244207254~1283538802</string>
    <string name="bannerOne">ca-app-pub-9041694244207254/7894917606</string>
    <string name="bannerTwo">ca-app-pub-9041694244207254/8058569132</string>
    <string name="bannerThree">ca-app-pub-9041694244207254/1493160782</string>


    //Test Ids
    <string name="testAdsFacebook">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="testAdsGoogle">ca-app-pub-3940256099942544/6300978111</string>

    //Store links
    <string name="PlayStore">https://play.google.com/store/apps/details?id=</string>
    <string name="Samsung">https://apps.samsung.com/appquery/appDetail.as?appId=</string>
    <string name="Amazon">https://www.amazon.com/dp/B08LGSK7WT/ref=apps_sf_sta</string>
    <string name="county">Country</string>
</resources>